2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 7:3:4.

2005-03-16  Bruno Haible  <bruno@clisp.org>

	Canonicalize locale names on MacOS X.
	* localename.c (_nl_locale_name_canonicalize): New function.
	(_nl_locale_name_default): Use it.
	* langprefs.c (_nl_locale_name_canonicalize): New declaration.
	(_nl_language_preferences_default): Use it.

2005-03-14  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.3 released.

2005-03-14  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (dist, distdir): Ignore a failure to copy Makefile.in.
	Needed because the automake-1.9 generated dist rule of the parent
	directory already copies this file.

2005-03-08  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 7:2:4.

2005-03-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (dist, distdir): Fail if some of the files to be
	distributed do not exist or cannot be copied.
	Suggested by Alexandre Duret-Lutz <adl@src.lip6.fr>.

2005-02-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.2 released.

2005-02-12  Bruno Haible  <bruno@clisp.org>

	* vasnprintf.c (EOVERFLOW): Define to a fallback if needed.

2005-02-11  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 7:1:4.

2005-01-29  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libintl.la, libgnuintl.la): Use INTL_MACOSX_LIBS
	instead of INTL_MACOSX_LDFLAGS.

2004-09-08  Bruno Haible  <bruno@clisp.org>

	* vasnprintf.c (VASNPRINTF): Signal EOVERFLOW if the resulting length
	is > INT_MAX.

2005-01-01  Bruno Haible  <bruno@clisp.org>

	* dcigettext.c (guess_category_value): Let the environment variables
	LC_ALL, LC_xxx, LANG take precedence over the system-dependent language
	preference list.
	* gettextP.h (_nl_language_preferences): Remove declaration.
	(_nl_language_preferences_default): New declaration.